--- a/paginas/Recetas Dulces.html
+++ b/paginas/Recetas Dulces.html
@@ -53,8 +53,8 @@
         <div>
             <h1 class="titulo1">Recetas Dulces</h1>
             <h2 class="titulo2">Alfajores de Maicena</H2>
-            <div class="centrarimagen">
-                <img src="https://i.pinimg.com/originals/ae/65/d0/ae65d07fc9a9d6b565f2d9f9da7b041f.jpg" width="350 px">
+            <div class="centrarimagen1 ">
+                <img width="300px" src="https://i.pinimg.com/originals/ae/65/d0/ae65d07fc9a9d6b565f2d9f9da7b041f.jpg">
             </div>
             <p class="intro">Los alfajores constan de dos galletas elaboradas con harina de maíz, que se deshacen en la boca al comerlas. Su elaboración es similar a las galletas tradicionales de mantequilla, pero estas van rellenas de dulce de leche, lo que convierte los alfajores en un bocado muy goloso.Lo más importante de esta receta es no pasarnos con el tiempo de horneado de las galletitas ya que no nos interesa que queden resecas, sino que estén blanditas y jugosas. Para el relleno, utilizaremos un dulce de leche de buena calidad, que sea denso, así no se nos desparramará cuando cerremos los alfajores.</p>
 
