--- a/paginas/Recetas Saladas.html
+++ b/paginas/Recetas Saladas.html
@@ -58,7 +58,7 @@
         
         <h2 class="titulo2">Chipa Casero</H2>
         <div class="centrarimagen">
-        <img src="https://th.bing.com/th/id/OIP.mz5Wl_oqw1_-MMrrsN76xAHaEK?pid=ImgDet&rs=1" width="400px"><!-- Imagen de la receta -->
+        <img width="450px" src="https://th.bing.com/th/id/OIP.mz5Wl_oqw1_-MMrrsN76xAHaEK?pid=ImgDet&rs=1"><!-- Imagen de la receta -->
         </div>
         <p class="intro">Los chipá no dejan de ser pequeños panecillos que se elaboran con harina de mandioca y harina de trigo y que están bien cargados de queso. Típicos de la cocina guaraní de Paraguay, estos panes que apenas necesitan levado suelen consumirse en el desayuno, aunque también para acompañar platos principales.</p>
     </main>
