--- a/paginas/Galeria.html
+++ b/paginas/Galeria.html
@@ -61,7 +61,7 @@
                 <div class="video">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/xlB8o0HsYcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
-                <p class="pie-de-video">Un browniees un bizcochode chocolatepequeño, típico de la gastronomía de Estados Unidos. Se llama así por su color marrónoscuro, o brownen inglés. A veces se cubre con jarabe espeso de chocolatey puede llevar dentro trocitos de nueces, chocolate butterscotch(una especie de toffeecrujiente) o mantequilla de maní.</p>
+                <p class="pie-de-video">Un browniees un bizcochode chocolatepequeño, típico de la gastronomía de Estados Unidos. Se llama así por su color marrónoscuro, o brownen inglés. A veces se cubre con jarabe espeso de chocolate y puede llevar dentro trocitos de nueces, chocolate butterscotch(una especie de toffeecrujiente) o mantequilla de maní.</p>
             </div>
             <h3 class="titulo3">Croumble de Manzana</h3>
             <div class="grid-galeria">
@@ -76,13 +76,13 @@
             <div class="galeria-fotos">
                 <img class="fotos1" src="../img/totas fondo.jpg" alt="petit fours">
                 <img class="fotos2" src="https://i.pinimg.com/564x/2a/ed/31/2aed31156245127b25360212b45659db.jpg" alt="frutas">
-                <img class="fotos3" src="https://i.pinimg.com/564x/a5/5e/48/a55e486e98491f92617b7e0a21b22cec.jpg" alt="coco">
-                <img class="fotos4" src="https://i.pinimg.com/564x/34/52/7b/34527b22da429f22bf5dc2e3ffc22530.jpg" alt="lemon pie">
-                <img class="fotos5" src="https://i.pinimg.com/564x/de/8b/e8/de8be8dd66178c243162da17204d61fe.jpg" alt="Brownies">
-                <img class="fotos6" src="https://i.pinimg.com/564x/f7/a9/a3/f7a9a3f4bb7b02619d3c3fd10eba5944.jpg" alt="Pastafrola">
-                <img class="fotos7" src="https://i.pinimg.com/564x/69/38/31/6938313660f93e491e738fdd68e530b8.jpg" alt="cheesecake">
-                <img class="fotos8" src="https://i.pinimg.com/564x/c7/8c/c4/c78cc46b1bec637be151a6e1ef8a61c2.jpg" alt="alfajores">
-                <img class="fotos9" src="https://i.pinimg.com/564x/2a/70/06/2a70069e1044bd80da06bef5e12cb026.jpg" alt="cerezas">
+                <img class="fotos3 " src="https://i.pinimg.com/564x/a5/5e/48/a55e486e98491f92617b7e0a21b22cec.jpg" alt="coco">
+                <img class="fotos4 fotos" src="https://i.pinimg.com/564x/34/52/7b/34527b22da429f22bf5dc2e3ffc22530.jpg" alt="lemon pie">
+                <img class="fotos5 fotos" src="https://i.pinimg.com/564x/de/8b/e8/de8be8dd66178c243162da17204d61fe.jpg" alt="Brownies">
+                <img class="fotos6 fotos" src="https://i.pinimg.com/564x/f7/a9/a3/f7a9a3f4bb7b02619d3c3fd10eba5944.jpg" alt="Pastafrola">
+                <img class="fotos7 fotos" src="https://i.pinimg.com/564x/69/38/31/6938313660f93e491e738fdd68e530b8.jpg" alt="cheesecake">
+                <img class="fotos8 fotos" src="https://i.pinimg.com/564x/c7/8c/c4/c78cc46b1bec637be151a6e1ef8a61c2.jpg" alt="alfajores">
+                <img class="fotos9 fotos" src="https://i.pinimg.com/564x/2a/70/06/2a70069e1044bd80da06bef5e12cb026.jpg" alt="cerezas">
                
             </div>
             </article>
