--- a/paginas/Recetas Saladas.html
+++ b/paginas/Recetas Saladas.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- SEO -->
+    <meta name="DESCRIPTION" content="EL RECETARIO DE PAZ">
+    <meta name="KEYWORDS" content="RECETARIO, RECETAS FACILES,RECIPE,CHIPA,EL MEJOR CHIPA,CHIPA FACIL Y BARATO,APRENDE A HACER CHIPA">
     <title>Recetas Saladas | El recetario de Paz</title>
     <!-- Favicon -->
     <link rel="shortcut icon" href="../img/favicon.jpg" type="image/x-icon">
