--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
         
     </header>
     <main>
-      <h1 class="titulo1">EL RECETARIO DE PAZ</h1>
+      <h1 class="titulo1">
+        EL RECETARIO DE PAZ
+      </h1>
       <h2 class="titulo2">Lo Mas IMPORTANTE para una buena Receta</h2>
       <div class="tarjetas">
         <div class="card">
@@ -78,7 +80,7 @@
        <!-- titulo de la receta -->
       <h2 class="titulo2">Torta Selva Negra</H2>
         <div class="centrarimagen">
-            <img class="selvanegra" src="https://i.pinimg.com/564x/f2/4b/fc/f24bfc20b4c8e5278564ce88e7ea4add.jpg"><!-- Imagen de la receta -->
+            <img class="selvanegra" src="https://i.pinimg.com/564x/f2/4b/fc/f24bfc20b4c8e5278564ce88e7ea4add.jpg" width="250px"><!-- Imagen de la receta -->
         </div>
         <p class="intro">La tarta o torta Selva Negra (en alemán, Schwarzwälder Kirschtorte) es una tarta típica de la cocina de Baden y uno de los dulces más característicos de la gastronomía alemana. Está compuesta por varias capas de bizcochuelo de chocolate empapado en kirsch e intercaladas con nata y cerezas. Está recubierta de crema chantillí, virutas de chocolate y cerezas.1​ En alemán, Schwarzwälder Kirschtorte significa "torta de cerezas de la Selva Negra".</p>
     </main>
