--- a/paginas/Galeria.html
+++ b/paginas/Galeria.html
@@ -62,14 +62,14 @@
             <h3 class="titulo3">Brownies de Chocolate</h3>
             <div class="grid-galeria">
                 <div class="video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/xlB8o0HsYcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="500" height="315" src="https://www.youtube.com/embed/xlB8o0HsYcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
                 <p class="pie-de-video">Un browniees un bizcochode chocolatepequeño, típico de la gastronomía de Estados Unidos. Se llama así por su color marrónoscuro, o brownen inglés. A veces se cubre con jarabe espeso de chocolate y puede llevar dentro trocitos de nueces, chocolate butterscotch(una especie de toffeecrujiente) o mantequilla de maní.</p>
             </div>
             <h3 class="titulo3">Croumble de Manzana</h3>
             <div class="grid-galeria">
                 <div class="video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/dJLxXYSvO6w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="500" height="315" src="https://www.youtube.com/embed/dJLxXYSvO6w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
                 <p class="pie-de-video">El crumble es un postre de origen anglosajón que se compone de una capa de fruta y otra de migas de galleta que se cuece en el horno. El calor reblandece la fruta y endurece la cobertura o crumble, dando lugar a un postre que es absolutamente adictivo.En el Reino Unido, los crumble están asociados al otoño y al invierno, a días fríos y lluviosos. Es por ello que se suelen consumir en caliente (o templado), aunque también se pueden consumir fríos. Hay tantos crumble como frutas existe (o sus combinaciones) y el que hoy preparamos es el de manzana. Posiblemente el más popular de todos, aunque el de ciruela y el de frutos del bosque le siguen muy de cerca.Son uno de los máximos exponentes de la cocina reconfortante o “comfort food” y están deliciosos por sí solos o acompañados de una bola de helado de vainilla o regados con un chorrito de crema inglesa.</p>
             </div>
@@ -93,7 +93,7 @@
     <aside>
         <p id="asidep">Te dejamos una playlist para cocinar de la mejor forma </p>
         <div>
-            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2bPikGWdRNKgnpjGACpGry?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            <iframe width="60%" class="spotify" style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2bPikGWdRNKgnpjGACpGry?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
     </aside>
     <footer><!-- Pie de pagina -->
