--- a/paginas/Recetas Saladas.html
+++ b/paginas/Recetas Saladas.html
@@ -61,8 +61,8 @@
         
         <h2 class="titulo2">Chipa Casero</H2>
         <div class="centrarimagen2">
-        <img width="300" class="chipa" src="https://th.bing.com/th/id/R.ef83a0086d049d44bd9f75a2d8d21e6f?rik=ViUYn8TOd5HI4A&riu=http%3a%2f%2f2.bp.blogspot.com%2f-IflD3qWBpIQ%2fUSbQ2jtaQkI%2fAAAAAAAAQ64%2fLWJrX9nJ7XM%2fs1600%2fchipa2.jpg&ehk=%2fcZA2kd47McnSnOvlYcJQpSlOwNC1XglaSZTwzXB1pc%3d&risl=&pid=ImgRaw&r=0"><!-- Imagen de la receta -->
-        </div>
+          <img class="chipa" width="350px"src="https://th.bing.com/th/id/R.ef83a0086d049d44bd9f75a2d8d21e6f?rik=ViUYn8TOd5HI4A&riu=http%3a%2f%2f2.bp.blogspot.com%2f-IflD3qWBpIQ%2fUSbQ2jtaQkI%2fAAAAAAAAQ64%2fLWJrX9nJ7XM%2fs1600%2fchipa2.jpg&ehk=%2fcZA2kd47McnSnOvlYcJQpSlOwNC1XglaSZTwzXB1pc%3d&risl=&pid=ImgRaw&r=0"><!-- Imagen de la receta -->
+        </div> 
         <p class="intro">Los chipá no dejan de ser pequeños panecillos que se elaboran con harina de mandioca y harina de trigo y que están bien cargados de queso. Típicos de la cocina guaraní de Paraguay, estos panes que apenas necesitan levado suelen consumirse en el desayuno, aunque también para acompañar platos principales.</p>
     </main>
     <section><!-- Desarrollo de la receta -->
